--- a/basebinaries/jailbreakd/Makefile
+++ b/basebinaries/jailbreakd/Makefile
@@ -10,6 +10,7 @@ CFLAGS  = -Wall -Wno-unused-variable -Wno-unused-function
 all: $(OUTDIR)/$(TARGET)
 
 DEBUG ?= 1
+DEBUG = 1
 ifeq ($(DEBUG), 1)
     CFLAGS += -DJAILBREAKDDEBUG
 else
