Add the LSApplicationQueriesSchemes back for the hyperlink to work correctly

--- a/electra1131/Info.plist
+++ b/electra1131/Info.plist
@@ -20,6 +20,14 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>aphelion</string>
+		<string>tweetbot</string>
+		<string>twitterrific</string>
+		<string>tweetings</string>
+		<string>twitter</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
